// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rh:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rf:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rf:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r7:"
           class="_label_348na_5"
           for="htmlid"
    >
      Navn
    </label>
    <input id="htmlid"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-testid="123ID"
           data-variant="medium"
           autocomplete="off"
           form="formid123"
    >
    <div id="textFieldErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r19:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r17:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="given-name"
           inputmode="text"
           placeholder="Kari Nordmann"
           name="test_name"
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCharacterLimit smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r3l:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r3l:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           aria-describedby="textFieldCharacterCounter-:r3m:"
           value
    >
    <div class="_inputCounter_uwfwg_1"
         aria-live="off"
    >
      50 tegn igjen
    </div>
    <div id="textFieldErrorId-:r3k:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCharacterLimitAndError smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3v:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r3t:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r3t:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r3s: textFieldCharacterCounter-:r3u:"
           aria-invalid="true"
           value
    >
    <div class="_inputCounter_uwfwg_1"
         aria-live="off"
    >
      50 tegn igjen
    </div>
    <div id="textFieldErrorId-:r3s:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Feilmelding
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCharacterLimitExceeded play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3r:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r3p:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r3p:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           aria-describedby="textFieldCharacterCounter-:r3q:"
           value="Dette er en veldig lang tekst som bør være mer enn 50 tegn"
    >
    <div class="_inputCounter_uwfwg_1 _inputCounter_overLimit_uwfwg_5"
         aria-live="polite"
         id="textFieldCharacterCounter-:r3q:"
    >
      8 tegn for mye
    </div>
    <div id="textFieldErrorId-:r3o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:rb:"
           class="_label_348na_5    dummyClassname"
           for="textFieldTextboxId-:r9:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:rb:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rc:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rc:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_sf6vs_17   dummyClassname">
      beskrivelse
    </div>
    <input id="textFieldTextboxId-:r9:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24 dummyClassname"
           data-variant="medium"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r8:"
           aria-invalid="true"
    >
    <div id="textFieldErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15 dummyClassname">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDataList play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3f:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r3d:"
    >
      nettlesere
    </label>
    <input id="textFieldTextboxId-:r3d:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           list="browsers"
    >
    <div id="textFieldErrorId-:r3c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <datalist id="browsers">
    <option value="Edge">
    </option>
    <option value="Firefox">
    </option>
    <option value="Chrome">
    </option>
    <option value="Opera">
    </option>
    <option value="Safari">
    </option>
  </datalist>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r11:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rv:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rv:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:ru:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r15:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r13:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r13:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           value="10 000"
    >
    <div id="textFieldErrorId-:r12:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r28:"
    >
      Navn
    </label>
    <div class="_description_sf6vs_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r28:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r27:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rp:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rn:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rn:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rm:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r25:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r23:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r23:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r22:"
           aria-invalid="true"
    >
    <div id="textFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r36:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r34:"
    >
      TextField har blitt blurret
    </label>
    <input id="textFieldTextboxId-:r34:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r33:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2q:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2o:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r2q:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2r:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2r:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2o:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2n:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r30:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2u:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r30:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r31:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r31:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_sf6vs_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r2u:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2t:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3a:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r38:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_sf6vs_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r3a:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3b:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3b:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r38:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r37:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2e:"
           class="_label_348na_5  _srOnly_348na_18"
           for="textFieldTextboxId-:r2c:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r2c:"
           class="_textbox_1kevi_5 $"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithLongInput smoke-test 1`] = `
<div data-test-block="true">
  <div class="textField150">
    <label id="labelId-:r3j:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r3h:"
    >
      Ledetekst
    </label>
    <input id="textFieldTextboxId-:r3h:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           value="Dette er en lang tekst som skal vises i tekstfeltet"
    >
    <div id="textFieldErrorId-:r3g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1p:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1n:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1n:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           maxlength="50"
           minlength="10"
    >
    <div id="textFieldErrorId-:r1m:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1t:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1r:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1r:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           pattern="[a-z]"
    >
    <div id="textFieldErrorId-:r1q:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1d:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1b:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1b:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r1a:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r3:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1h:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1f:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1f:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           required
    >
    <div id="textFieldErrorId-:r1e:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1l:"
           class="_label_348na_5 _label_required_348na_12"
           for="textFieldTextboxId-:r1j:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1j:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           required
    >
    <div id="textFieldErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2i:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2g:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r2g:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2m:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2k:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r2k:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2j:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rt:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rr:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rr:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="medium"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rl:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rj:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rj:"
           class="_textbox_1kevi_5 $ _textboxMarginTop_1kevi_24"
           data-variant="large"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:ri:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
